math-core/tests/snapshots/error_test__spaces_in_env_name.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{  pmatrix   } x \\\\ y \\end{pmatrix}"
---
Position: 6
UnknownEnvironment(
    "  pmatrix   ",
)
