math-core/tests/snapshots/error_test__sub_sub.snap
---
source: math-core/tests/error_test.rs
expression: x_2_3 y
---
Position: 3
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
