math-core/tests/snapshots/error_test__sup_sup.snap
---
source: math-core/tests/error_test.rs
expression: x^2^3 y
---
Position: 3
CannotBeUsedHere {
    got: Circumflex,
    correct_place: AfterOpOrIdent,
}
