math-core/tests/snapshots/error_test__super_then_prime.snap
---
source: math-core/tests/error_test.rs
expression: "f^2'"
---
Position: 3
CannotBeUsedHere {
    got: Prime,
    correct_place: AfterOpOrIdent,
}
