math-core/tests/snapshots/error_test__tag_in_aligned.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{aligned}\\tag{32}1\\end{aligned}"
---
Position: 15
CannotBeUsedHere {
    got: Tag,
    correct_place: NumberedEnv,
}
