math-core/tests/snapshots/error_test__tag_with_empty.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{align} x \\tag{} \\\\ y \\end{align}"
---
Position: 20
ExpectedNumber
