math-core/tests/snapshots/error_test__tag_with_non_number.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{align}x\\tag{A1}\\end{align}"
---
Position: 18
ExpectedNumber(
    "A1",
)
