math-core/tests/snapshots/error_test__tag_with_zero.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{align} x \\tag{0} \\\\ y \\end{align}"
---
Position: 20
ExpectedNumber(
    "0",
)
