math-core/tests/snapshots/error_test__text_with_math_command.snap
---
source: math-core/tests/error_test.rs
expression: "\\text{\\max}"
---
Position: 6
UnknownCommand(
    "max",
)
