math-core/tests/snapshots/error_test__unclosed_begin.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{matrix"
---
Position: 13
UnexpectedEOF
